# my_rust_kernel

./: Makefile  README.md  flake.nix  kernel.elf  kernel.img
bootloader/: boot.S  boot.asm  linker.ld
kernel/: Cargo.toml  linker.ld
kernel/.cargo/: config.toml
kernel/src/: kernel.rs
kernel/src/config/: header.rs  mod.rs  uart.rs
my_rust_kernel/: Cargo.toml
steps/: 1_Bootloader.MD
