[package]
name = "kernel"
version = "0.1.0"
edition = "2024"
authors = ["Martin Levesque <martin.levesque@epita.fr>"]

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.release]
opt-level = 3
lto = true
debug = true
panic = "abort"

[lib]
name = "kernel"
path = "src/kernel.rs"
crate-type = ["staticlib"]

[dependencies]
